# MDE4CPP

./: .cproject  .gitattributes  .gitignore  .gitmodules  .project  CONTRIBUTING.md  LICENSE  MDE4CPP_Generator.properties  README.md  VERSION.md  build.gradle  res2.txt  res3.txt  setent.bat.default  setenv.bat.default  setenv.default  setenv.sh.default  settings.gradle  start.bat  start_eclipse.bat
SubsetUnion/: .cproject  CMakeLists.txt
SubsetUnion/src/: Bag.hpp  Subset.hpp  SubsetUnion.hpp  Union.hpp  main.cpp
fUMLExample/Calculator/src_gen/: CMakeLists.txt  build.gradle  settings.gradle
pluginFramework/: .cproject  .project  CMakeLists.txt  build.gradle
pluginFramework/src/: EcoreModelPlugin.hpp  FUMLPlugin.hpp  MDE4CPPPlugin.hpp  PluginFramework.cpp  PluginFramework.hpp  UMLExecutionModelPlugin.hpp  UMLModelPlugin.hpp  UMLPlugin.hpp
pluginFramework/src/pluginFramework/: .cproject  CMakeLists.txt  EcoreModelPlugin.hpp  MDE4CPPPlugin.hpp  PluginFramework.cpp  PluginFramework.hpp  UMLExecutionModelPlugin.hpp  UMLModelPlugin.hpp
simpleExamples/UMLModelExample/application/: .cproject  .project  CMakeLists.txt  build.gradle
simpleExamples/ecoreModelExample/application/: .cproject  .project  CMakeLists.txt  build.gradle
src/common/persistence/: .cproject  CMakeLists.txt  build.gradle
src/ocl/oclParser/: .cproject  .project  CMakeLists.txt  build.gradle
src_gen/: CMakeLists.txt  build.gradle  build.gradle.bkp  settings.gradle
src_gen/ecore/: .cproject  .project  EAnnotation.hpp  EAttribute.hpp  EClass.hpp  EClassifier.hpp  EDataType.hpp  EEnum.hpp  EEnumLiteral.hpp  EFactory.hpp  EGenericType.hpp  EModelElement.hpp  ENamedElement.hpp  EObject.hpp  EOperation.hpp  EPackage.hpp  EParameter.hpp  EReference.hpp  EStringToStringMapEntry.hpp  EStructuralFeature.hpp  ETypeParameter.hpp  ETypedElement.hpp  EcoreFactory.cpp  EcoreFactory.hpp  EcorePackage.cpp  EcorePackage.hpp  EcorePlugin.hpp  build.gradle
src_gen/ecore/impl/: EAnnotationImpl.cpp  EAnnotationImpl.hpp  EAttributeImpl.cpp  EAttributeImpl.hpp  EClassImpl.cpp  EClassImpl.hpp  EClassifierImpl.cpp  EClassifierImpl.hpp  EDataTypeImpl.cpp  EDataTypeImpl.hpp  EEnumImpl.cpp  EEnumImpl.hpp  EEnumLiteralImpl.cpp  EEnumLiteralImpl.hpp  EFactoryImpl.cpp  EFactoryImpl.hpp  EGenericTypeImpl.cpp  EGenericTypeImpl.hpp  EModelElementImpl.cpp  EModelElementImpl.hpp  ENamedElementImpl.cpp  ENamedElementImpl.hpp  EObjectImpl.cpp  EObjectImpl.hpp  EOperationImpl.cpp  EOperationImpl.hpp  EPackageImpl.cpp  EPackageImpl.hpp  EParameterImpl.cpp  EParameterImpl.hpp  EReferenceImpl.cpp  EReferenceImpl.hpp  EStringToStringMapEntryImpl.cpp  EStringToStringMapEntryImpl.hpp  EStructuralFeatureImpl.cpp  EStructuralFeatureImpl.hpp  ETypeParameterImpl.cpp  ETypeParameterImpl.hpp  ETypedElementImpl.cpp  ETypedElementImpl.hpp  (+5 more)
src_gen/ecoreReflection/: .project  EcorePackage.cpp  EcorePackage.hpp  build.gradle
src_gen/ecoreReflection/impl/: EcorePackageImpl.cpp  EcorePackageImpl.hpp
src_gen/fUML/: .cproject  .project  AcceptEventActionActivation.hpp  AcceptEventActionEventAccepter.hpp  ActionActivation.hpp  ActivityEdgeInstance.hpp  ActivityExecution.hpp  ActivityFinalNodeActivation.hpp  ActivityNodeActivation.hpp  ActivityNodeActivationGroup.hpp  ActivityParameterNodeActivation.hpp  AddStructuralFeatureValueActionActivation.hpp  BooleanValue.hpp  CMakeLists.txt  CallActionActivation.hpp  CallBehaviorActionActivation.hpp  CallOperationActionActivation.hpp  CentralBufferNodeActivation.hpp  ChoiceStrategy.hpp  ClassifierBehaviorExecution.hpp  ClassifierBehaviorExecutionActivity.hpp  ClassifierBehaviorExecutionActivity_OwnedBehaviorActivity1.hpp  ClauseActivation.hpp  ClearAssociationActionActivation.hpp  ClearStructuralFeatureActionActivation.hpp  CompoundValue.hpp  ConditionalNodeActivation.hpp  ControlNodeActivation.hpp  ControlToken.hpp  CreateLinkActionActivation.hpp  CreateObjectActionActivation.hpp  DataStoreActivation.hpp  DataStoreNodeActivation.hpp  DataValue.hpp  DecisionNodeActivation.hpp  DestroyLinkActionActivation.hpp  DestroyObjectActionActivation.hpp  DispatchStrategy.hpp  EnumerationValue.hpp  Evaluation.hpp  (+87 more)
src_gen/fUML/impl/: AcceptEventActionActivationImpl.cpp  AcceptEventActionActivationImpl.hpp  AcceptEventActionEventAccepterImpl.cpp  AcceptEventActionEventAccepterImpl.hpp  ActionActivationImpl.cpp  ActionActivationImpl.hpp  ActivityEdgeInstanceImpl.cpp  ActivityEdgeInstanceImpl.hpp  ActivityExecutionImpl.cpp  ActivityExecutionImpl.hpp  ActivityFinalNodeActivationImpl.cpp  ActivityFinalNodeActivationImpl.hpp  ActivityNodeActivationGroupImpl.cpp  ActivityNodeActivationGroupImpl.hpp  ActivityNodeActivationImpl.cpp  ActivityNodeActivationImpl.hpp  ActivityParameterNodeActivationImpl.cpp  ActivityParameterNodeActivationImpl.hpp  AddStructuralFeatureValueActionActivationImpl.cpp  AddStructuralFeatureValueActionActivationImpl.hpp  BooleanValueImpl.cpp  (+221 more)
src_gen/primitivetypesReflection/: .project  PrimitiveTypesPackage.cpp  PrimitiveTypesPackage.hpp  build.gradle
src_gen/types/: .project  TypesFactory.cpp  TypesFactory.hpp  TypesPackage.cpp  TypesPackage.hpp  TypesPlugin.cpp  build.gradle
src_gen/uml/: .cproject  .project  Abstraction.hpp  AcceptCallAction.hpp  AcceptEventAction.hpp  Action.hpp  ActionExecutionSpecification.hpp  ActionInputPin.hpp  Activity.hpp  ActivityContent.hpp  ActivityEdge.hpp  ActivityFinalNode.hpp  ActivityGroup.hpp  ActivityNode.hpp  ActivityParameterNode.hpp  ActivityPartition.hpp  Actor.hpp  AddStructuralFeatureValueAction.hpp  AddVariableValueAction.hpp  AggregationKind.hpp  AnyReceiveEvent.hpp  Artifact.hpp  Association.hpp  AssociationClass.hpp  Behavior.hpp  BehaviorExecutionSpecification.hpp  BehavioralFeature.hpp  BehavioredClassifier.hpp  BroadcastSignalAction.hpp  CMakeLists.txt  CallAction.hpp  CallBehaviorAction.hpp  CallConcurrencyKind.hpp  CallEvent.hpp  CallOperationAction.hpp  CentralBufferNode.hpp  ChangeEvent.hpp  Class.hpp  Classifier.hpp  ClassifierTemplateParameter.hpp  (+228 more)
src_gen/umlReflection/: .cproject  .project  UMLPackage.cpp  UMLPackage.hpp  build.gradle
(+7161 files in other folders)
