cmake_minimum_required(VERSION 3.9)
project(src_gen)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        fUML/impl/AcceptEventActionActivationImpl.cpp
        fUML/impl/AcceptEventActionActivationImpl.hpp
        fUML/impl/AcceptEventActionEventAccepterImpl.cpp
        fUML/impl/AcceptEventActionEventAccepterImpl.hpp
        fUML/impl/ActionActivationImpl.cpp
        fUML/impl/ActionActivationImpl.hpp
        fUML/impl/ActivityEdgeInstanceImpl.cpp
        fUML/impl/ActivityEdgeInstanceImpl.hpp
        fUML/impl/ActivityExecutionImpl.cpp
        fUML/impl/ActivityExecutionImpl.hpp
        fUML/impl/ActivityFinalNodeActivationImpl.cpp
        fUML/impl/ActivityFinalNodeActivationImpl.hpp
        fUML/impl/ActivityNodeActivationGroupImpl.cpp
        fUML/impl/ActivityNodeActivationGroupImpl.hpp
        fUML/impl/ActivityNodeActivationImpl.cpp
        fUML/impl/ActivityNodeActivationImpl.hpp
        fUML/impl/ActivityParameterNodeActivationImpl.cpp
        fUML/impl/ActivityParameterNodeActivationImpl.hpp
        fUML/impl/AddStructuralFeatureValueActionActivationImpl.cpp
        fUML/impl/AddStructuralFeatureValueActionActivationImpl.hpp
        fUML/impl/BooleanValueImpl.cpp
        fUML/impl/BooleanValueImpl.hpp
        fUML/impl/CallActionActivationImpl.cpp
        fUML/impl/CallActionActivationImpl.hpp
        fUML/impl/CallBehaviorActionActivationImpl.cpp
        fUML/impl/CallBehaviorActionActivationImpl.hpp
        fUML/impl/CallOperationActionActivationImpl.cpp
        fUML/impl/CallOperationActionActivationImpl.hpp
        fUML/impl/CentralBufferNodeActivationImpl.cpp
        fUML/impl/CentralBufferNodeActivationImpl.hpp
        fUML/impl/ChoiceStrategyImpl.cpp
        fUML/impl/ChoiceStrategyImpl.hpp
        fUML/impl/ClassifierBehaviorExecutionActivity_OwnedBehaviorActivity1Impl.cpp
        fUML/impl/ClassifierBehaviorExecutionActivity_OwnedBehaviorActivity1Impl.hpp
        fUML/impl/ClassifierBehaviorExecutionActivityImpl.cpp
        fUML/impl/ClassifierBehaviorExecutionActivityImpl.hpp
        fUML/impl/ClassifierBehaviorExecutionImpl.cpp
        fUML/impl/ClassifierBehaviorExecutionImpl.hpp
        fUML/impl/ClauseActivationImpl.cpp
        fUML/impl/ClauseActivationImpl.hpp
        fUML/impl/ClearAssociationActionActivationImpl.cpp
        fUML/impl/ClearAssociationActionActivationImpl.hpp
        fUML/impl/ClearStructuralFeatureActionActivationImpl.cpp
        fUML/impl/ClearStructuralFeatureActionActivationImpl.hpp
        fUML/impl/CompoundValueImpl.cpp
        fUML/impl/CompoundValueImpl.hpp
        fUML/impl/ConditionalNodeActivationImpl.cpp
        fUML/impl/ConditionalNodeActivationImpl.hpp
        fUML/impl/ControlNodeActivationImpl.cpp
        fUML/impl/ControlNodeActivationImpl.hpp
        fUML/impl/ControlTokenImpl.cpp
        fUML/impl/ControlTokenImpl.hpp
        fUML/impl/CreateLinkActionActivationImpl.cpp
        fUML/impl/CreateLinkActionActivationImpl.hpp
        fUML/impl/CreateObjectActionActivationImpl.cpp
        fUML/impl/CreateObjectActionActivationImpl.hpp
        fUML/impl/DataStoreNodeActivationImpl.cpp
        fUML/impl/DataStoreNodeActivationImpl.hpp
        fUML/impl/DataValueImpl.cpp
        fUML/impl/DataValueImpl.hpp
        fUML/impl/DecisionNodeActivationImpl.cpp
        fUML/impl/DecisionNodeActivationImpl.hpp
        fUML/impl/DestroyLinkActionActivationImpl.cpp
        fUML/impl/DestroyLinkActionActivationImpl.hpp
        fUML/impl/DestroyObjectActionActivationImpl.cpp
        fUML/impl/DestroyObjectActionActivationImpl.hpp
        fUML/impl/DispatchStrategyImpl.cpp
        fUML/impl/DispatchStrategyImpl.hpp
        fUML/impl/EnumerationValueImpl.cpp
        fUML/impl/EnumerationValueImpl.hpp
        fUML/impl/EvaluationImpl.cpp
        fUML/impl/EvaluationImpl.hpp
        fUML/impl/EventAccepterImpl.cpp
        fUML/impl/EventAccepterImpl.hpp
        fUML/impl/EventDispatchLoopImpl.cpp
        fUML/impl/EventDispatchLoopImpl.hpp
        fUML/impl/ExecutionFactoryImpl.cpp
        fUML/impl/ExecutionFactoryImpl.hpp
        fUML/impl/ExecutionFactoryL1Impl.cpp
        fUML/impl/ExecutionFactoryL1Impl.hpp
        fUML/impl/ExecutionFactoryL2Impl.cpp
        fUML/impl/ExecutionFactoryL2Impl.hpp
        fUML/impl/ExecutionFactoryL3Impl.cpp
        fUML/impl/ExecutionFactoryL3Impl.hpp
        fUML/impl/ExecutionImpl.cpp
        fUML/impl/ExecutionImpl.hpp
        fUML/impl/ExecutorImpl.cpp
        fUML/impl/ExecutorImpl.hpp
        fUML/impl/ExpansionActivationGroupImpl.cpp
        fUML/impl/ExpansionActivationGroupImpl.hpp
        fUML/impl/ExpansionNodeActivationImpl.cpp
        fUML/impl/ExpansionNodeActivationImpl.hpp
        fUML/impl/ExpansionRegionActivationImpl.cpp
        fUML/impl/ExpansionRegionActivationImpl.hpp
        fUML/impl/ExtensionalValueImpl.cpp
        fUML/impl/ExtensionalValueImpl.hpp
        fUML/impl/ExtensionalValueListImpl.cpp
        fUML/impl/ExtensionalValueListImpl.hpp
        fUML/impl/FeatureValueImpl.cpp
        fUML/impl/FeatureValueImpl.hpp
        fUML/impl/FIFOGetNextEventStrategyImpl.cpp
        fUML/impl/FIFOGetNextEventStrategyImpl.hpp
        fUML/impl/FirstChoiceStrategyImpl.cpp
        fUML/impl/FirstChoiceStrategyImpl.hpp
        fUML/impl/FlowFinalNodeActivationImpl.cpp
        fUML/impl/FlowFinalNodeActivationImpl.hpp
        fUML/impl/ForkedTokenImpl.cpp
        fUML/impl/ForkedTokenImpl.hpp
        fUML/impl/ForkNodeActivationImpl.cpp
        fUML/impl/ForkNodeActivationImpl.hpp
        fUML/impl/FUMLFactoryImpl.cpp
        fUML/impl/FUMLFactoryImpl.hpp
        fUML/impl/FUMLPackageImpl.cpp
        fUML/impl/FUMLPackageImpl.hpp
        fUML/impl/FUMLPluginImpl.cpp
        fUML/impl/FUMLPluginImpl.hpp
        fUML/impl/GetNextEventStrategyImpl.cpp
        fUML/impl/GetNextEventStrategyImpl.hpp
        fUML/impl/InitialNodeActivationImpl.cpp
        fUML/impl/InitialNodeActivationImpl.hpp
        fUML/impl/InputPinActivationImpl.cpp
        fUML/impl/InputPinActivationImpl.hpp
        fUML/impl/InstanceValueEvaluationImpl.cpp
        fUML/impl/InstanceValueEvaluationImpl.hpp
        fUML/impl/IntegerValueImpl.cpp
        fUML/impl/IntegerValueImpl.hpp
        fUML/impl/InvocationActionActivationImpl.cpp
        fUML/impl/InvocationActionActivationImpl.hpp
        fUML/impl/JoinNodeActivationImpl.cpp
        fUML/impl/JoinNodeActivationImpl.hpp
        fUML/impl/LinkActionActivationImpl.cpp
        fUML/impl/LinkActionActivationImpl.hpp
        fUML/impl/LinkImpl.cpp
        fUML/impl/LinkImpl.hpp
        fUML/impl/LiteralBooleanEvaluationImpl.cpp
        fUML/impl/LiteralBooleanEvaluationImpl.hpp
        fUML/impl/LiteralEvaluationImpl.cpp
        fUML/impl/LiteralEvaluationImpl.hpp
        fUML/impl/LiteralIntegerEvaluationImpl.cpp
        fUML/impl/LiteralIntegerEvaluationImpl.hpp
        fUML/impl/LiteralNullEvaluationImpl.cpp
        fUML/impl/LiteralNullEvaluationImpl.hpp
        fUML/impl/LiteralRealEvaluationImpl.cpp
        fUML/impl/LiteralRealEvaluationImpl.hpp
        fUML/impl/LiteralStringEvaluationImpl.cpp
        fUML/impl/LiteralStringEvaluationImpl.hpp
        fUML/impl/LiteralUnlimitedNaturalEvaluationImpl.cpp
        fUML/impl/LiteralUnlimitedNaturalEvaluationImpl.hpp
        fUML/impl/LocusImpl.cpp
        fUML/impl/LocusImpl.hpp
        fUML/impl/LoopNodeActivationImpl.cpp
        fUML/impl/LoopNodeActivationImpl.hpp
        fUML/impl/MergeNodeActivationImpl.cpp
        fUML/impl/MergeNodeActivationImpl.hpp
        fUML/impl/ObjectActivationImpl.cpp
        fUML/impl/ObjectActivationImpl.hpp
        fUML/impl/ObjectImpl.cpp
        fUML/impl/ObjectImpl.hpp
        fUML/impl/ObjectNodeActivationImpl.cpp
        fUML/impl/ObjectNodeActivationImpl.hpp
        fUML/impl/ObjectTokenImpl.cpp
        fUML/impl/ObjectTokenImpl.hpp
        fUML/impl/OfferImpl.cpp
        fUML/impl/OfferImpl.hpp
        fUML/impl/OpaqueBehaviorExecutionImpl.cpp
        fUML/impl/OpaqueBehaviorExecutionImpl.hpp
        fUML/impl/OutputPinActivationImpl.cpp
        fUML/impl/OutputPinActivationImpl.hpp
        fUML/impl/ParameterValueImpl.cpp
        fUML/impl/ParameterValueImpl.hpp
        fUML/impl/PinActivationImpl.cpp
        fUML/impl/PinActivationImpl.hpp
        fUML/impl/PointerValueImpl.cpp
        fUML/impl/PointerValueImpl.hpp
        fUML/impl/PrimitiveValueImpl.cpp
        fUML/impl/PrimitiveValueImpl.hpp
        fUML/impl/ReadExtentActionActivationImpl.cpp
        fUML/impl/ReadExtentActionActivationImpl.hpp
        fUML/impl/ReadIsClassifiedObjectActionActivationImpl.cpp
        fUML/impl/ReadIsClassifiedObjectActionActivationImpl.hpp
        fUML/impl/ReadLinkActionActivationImpl.cpp
        fUML/impl/ReadLinkActionActivationImpl.hpp
        fUML/impl/ReadSelfActionActivationImpl.cpp
        fUML/impl/ReadSelfActionActivationImpl.hpp
        fUML/impl/ReadStructuralFeatureActionActivationImpl.cpp
        fUML/impl/ReadStructuralFeatureActionActivationImpl.hpp
        fUML/impl/RealValueImpl.cpp
        fUML/impl/RealValueImpl.hpp
        fUML/impl/ReclassifyObjectActionActivationImpl.cpp
        fUML/impl/ReclassifyObjectActionActivationImpl.hpp
        fUML/impl/RedefinitionBasedDispatchStrategyImpl.cpp
        fUML/impl/RedefinitionBasedDispatchStrategyImpl.hpp
        fUML/impl/ReduceActionActivationImpl.cpp
        fUML/impl/ReduceActionActivationImpl.hpp
        fUML/impl/ReferenceImpl.cpp
        fUML/impl/ReferenceImpl.hpp
        fUML/impl/RemoveStructuralFeatureValueActivationImpl.cpp
        fUML/impl/RemoveStructuralFeatureValueActivationImpl.hpp
        fUML/impl/SemanticStrategyImpl.cpp
        fUML/impl/SemanticStrategyImpl.hpp
        fUML/impl/SemanticVisitorImpl.cpp
        fUML/impl/SemanticVisitorImpl.hpp
        fUML/impl/SendSignalActionActivationImpl.cpp
        fUML/impl/SendSignalActionActivationImpl.hpp
        fUML/impl/SignalInstanceImpl.cpp
        fUML/impl/SignalInstanceImpl.hpp
        fUML/impl/StartClassifierBehaviorActionActivationImpl.cpp
        fUML/impl/StartClassifierBehaviorActionActivationImpl.hpp
        fUML/impl/StartObjectBehaviorActionActivationImpl.cpp
        fUML/impl/StartObjectBehaviorActionActivationImpl.hpp
        fUML/impl/StringValueImpl.cpp
        fUML/impl/StringValueImpl.hpp
        fUML/impl/StructuralFeatureActionActivationImpl.cpp
        fUML/impl/StructuralFeatureActionActivationImpl.hpp
        fUML/impl/StructuredActivityNodeActivationImpl.cpp
        fUML/impl/StructuredActivityNodeActivationImpl.hpp
        fUML/impl/StructuredValueImpl.cpp
        fUML/impl/StructuredValueImpl.hpp
        fUML/impl/TestIdentityActionActivationImpl.cpp
        fUML/impl/TestIdentityActionActivationImpl.hpp
        fUML/impl/TokenImpl.cpp
        fUML/impl/TokenImpl.hpp
        fUML/impl/TokenSetImpl.cpp
        fUML/impl/TokenSetImpl.hpp
        fUML/impl/UnlimitedNaturalValueImpl.cpp
        fUML/impl/UnlimitedNaturalValueImpl.hpp
        fUML/impl/ValueImpl.cpp
        fUML/impl/ValueImpl.hpp
        fUML/impl/ValuesImpl.cpp
        fUML/impl/ValuesImpl.hpp
        fUML/impl/ValueSpecificActionActivationImpl.cpp
        fUML/impl/ValueSpecificActionActivationImpl.hpp
        fUML/impl/WriteLinkActionActivationImpl.cpp
        fUML/impl/WriteLinkActionActivationImpl.hpp
        fUML/impl/WriteStructuralFeatureActionActivationImpl.cpp
        fUML/impl/WriteStructuralFeatureActionActivationImpl.hpp
        fUML/AcceptEventActionActivation.hpp
        fUML/AcceptEventActionEventAccepter.hpp
        fUML/ActionActivation.hpp
        fUML/ActivityEdgeInstance.hpp
        fUML/ActivityExecution.hpp
        fUML/ActivityFinalNodeActivation.hpp
        fUML/ActivityNodeActivation.hpp
        fUML/ActivityNodeActivationGroup.hpp
        fUML/ActivityParameterNodeActivation.hpp
        fUML/AddStructuralFeatureValueActionActivation.hpp
        fUML/BooleanValue.hpp
        fUML/CallActionActivation.hpp
        fUML/CallBehaviorActionActivation.hpp
        fUML/CallOperationActionActivation.hpp
        fUML/CentralBufferNodeActivation.hpp
        fUML/ChoiceStrategy.hpp
        fUML/ClassifierBehaviorExecution.hpp
        fUML/ClassifierBehaviorExecutionActivity.hpp
        fUML/ClassifierBehaviorExecutionActivity_OwnedBehaviorActivity1.hpp
        fUML/ClauseActivation.hpp
        fUML/ClearAssociationActionActivation.hpp
        fUML/ClearStructuralFeatureActionActivation.hpp
        fUML/CompoundValue.hpp
        fUML/ConditionalNodeActivation.hpp
        fUML/ControlNodeActivation.hpp
        fUML/ControlToken.hpp
        fUML/CreateLinkActionActivation.hpp
        fUML/CreateObjectActionActivation.hpp
        fUML/DataStoreNodeActivation.hpp
        fUML/DataValue.hpp
        fUML/DecisionNodeActivation.hpp
        fUML/DestroyLinkActionActivation.hpp
        fUML/DestroyObjectActionActivation.hpp
        fUML/DispatchStrategy.hpp
        fUML/EnumerationValue.hpp
        fUML/Evaluation.hpp
        fUML/EventAccepter.hpp
        fUML/EventDispatchLoop.hpp
        fUML/Execution.hpp
        fUML/ExecutionFactory.hpp
        fUML/ExecutionFactoryL1.hpp
        fUML/ExecutionFactoryL2.hpp
        fUML/ExecutionFactoryL3.hpp
        fUML/Executor.hpp
        fUML/ExpansionActivationGroup.hpp
        fUML/ExpansionNodeActivation.hpp
        fUML/ExpansionRegionActivation.hpp
        fUML/ExtensionalValue.hpp
        fUML/ExtensionalValueList.hpp
        fUML/FeatureValue.hpp
        fUML/FIFOGetNextEventStrategy.hpp
        fUML/FirstChoiceStrategy.hpp
        fUML/FlowFinalNodeActivation.hpp
        fUML/ForkedToken.hpp
        fUML/ForkNodeActivation.hpp
        fUML/FUMLFactory.cpp
        fUML/FUMLFactory.hpp
        fUML/FUMLPackage.cpp
        fUML/FUMLPackage.hpp
        fUML/FUMLPlugin.cpp
        fUML/FUMLPlugin.hpp
        fUML/GetNextEventStrategy.hpp
        fUML/InitialNodeActivation.hpp
        fUML/InputPinActivation.hpp
        fUML/InstanceValueEvaluation.hpp
        fUML/IntegerValue.hpp
        fUML/InvocationActionActivation.hpp
        fUML/JoinNodeActivation.hpp
        fUML/Link.hpp
        fUML/LinkActionActivation.hpp
        fUML/LiteralBooleanEvaluation.hpp
        fUML/LiteralEvaluation.hpp
        fUML/LiteralIntegerEvaluation.hpp
        fUML/LiteralNullEvaluation.hpp
        fUML/LiteralRealEvaluation.hpp
        fUML/LiteralStringEvaluation.hpp
        fUML/LiteralUnlimitedNaturalEvaluation.hpp
        fUML/Locus.hpp
        fUML/LoopNodeActivation.hpp
        fUML/MergeNodeActivation.hpp
        fUML/Object.hpp
        fUML/ObjectActivation.hpp
        fUML/ObjectNodeActivation.hpp
        fUML/ObjectToken.hpp
        fUML/Offer.hpp
        fUML/OpaqueBehaviorExecution.hpp
        fUML/OutputPinActivation.hpp
        fUML/ParameterValue.hpp
        fUML/PinActivation.hpp
        fUML/PointerValue.hpp
        fUML/PrimitiveValue.hpp
        fUML/ReadExtentActionActivation.hpp
        fUML/ReadIsClassifiedObjectActionActivation.hpp
        fUML/ReadLinkActionActivation.hpp
        fUML/ReadSelfActionActivation.hpp
        fUML/ReadStructuralFeatureActionActivation.hpp
        fUML/RealValue.hpp
        fUML/ReclassifyObjectActionActivation.hpp
        fUML/RedefinitionBasedDispatchStrategy.hpp
        fUML/ReduceActionActivation.hpp
        fUML/Reference.hpp
        fUML/RemoveStructuralFeatureValueActivation.hpp
        fUML/SemanticStrategy.hpp
        fUML/SemanticVisitor.hpp
        fUML/SendSignalActionActivation.hpp
        fUML/SignalInstance.hpp
        fUML/StartClassifierBehaviorActionActivation.hpp
        fUML/StartObjectBehaviorActionActivation.hpp
        fUML/StringValue.hpp
        fUML/StructuralFeatureActionActivation.hpp
        fUML/StructuredActivityNodeActivation.hpp
        fUML/StructuredValue.hpp
        fUML/TestIdentityActionActivation.hpp
        fUML/Token.hpp
        fUML/TokenSet.hpp
        fUML/UnlimitedNaturalValue.hpp
        fUML/Value.hpp
        fUML/Values.hpp
        fUML/ValueSpecificActionActivation.hpp
        fUML/WriteLinkActionActivation.hpp
        fUML/WriteStructuralFeatureActionActivation.hpp)

add_executable(src_gen ${SOURCE_FILES})